--- a/Lwarp-JFM/Sample_Lwarp_Xy-jax-2.html
+++ b/Lwarp-JFM/Sample_Lwarp_Xy-jax-2.html
@@ -303,7 +303,7 @@ Home</a>
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-1.html#autosec-5" class="tocsection" >
-<span class="sectionnumber">1</span>&#x2003;Context: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
+<span class="sectionnumber">1</span>&#x2003;Context and instructions: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
 </p>
 
 
@@ -351,24 +351,30 @@ Home</a>
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-8.html#autosec-61" class="tocsubsection" >
-<span class="sectionnumber">5.4</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
-</p>
-
-
-<p>
-<a href="Sample_Lwarp_Xy-jax-9.html#autosec-65" class="tocsection" >
-<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+<span class="sectionnumber">5.4</span>&#x2003;A tikz image compiled to an image with alt text, outside a float environment, and with a caption</a>
 </p>
 
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-9.html#autosec-66" class="tocsubsection" >
+<span class="sectionnumber">5.5</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-70" class="tocsection" >
+<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-71" class="tocsubsection" >
 <span class="sectionnumber">6.1</span>&#x2003;Adjoint functors and coadjoint functors via universal arrows</a>
 </p>
 
 
 <p>
-<a href="Sample_Lwarp_Xy-jax-10.html#autosec-72" class="tocsubsection" >
+<a href="Sample_Lwarp_Xy-jax-11.html#autosec-77" class="tocsubsection" >
 <span class="sectionnumber">6.2</span>&#x2003;The Galois correspondence for \(f(t)=t^3-2\), over the rational field</a>
 </p>
 
@@ -518,6 +524,8 @@ Home</a>
 
 \(\newcommand {\Dc }{ \mathcal {D} }\)
 
+\( \newcommand {\Grp }{ \mathrm {Grp} } \)
+
 \(\newcommand {\Z }{ \mathbb {Z} }\)
 
 \(\newcommand {\ra }[1]{\xrightarrow {#1}}\)
@@ -555,7 +563,9 @@ Home</a>
 </div>
 
 <p>
-<!--................................-->
+<!--
+...... section Examples: xymatrix diagrams displayed with Xy-Jaxv3 using Lwarp ......
+-->
 <h4 id="autosec-13"><span class="sectionnumber">2&#x2003;</span>Examples: xymatrix diagrams displayed with Xy-Jaxv3 using Lwarp</h4>
 <a id="Sample_Lwarp_Xy-jax-split-autopage-13"></a>
 <a id="Sample_Lwarp_Xy-jax-split-autofile-2"></a><a id="sec:context"></a>
@@ -573,7 +583,7 @@ This is an example of a HTML file with:
 <!--
 
 
-                                                                                                     x2 + y 2 = 1,                                                                    (1)--><a id="test"></a><!--
+                                                                                                     x2 + y 2 = 1,                                                                  (1)--><a id="test"></a><!--
 
 -->
 <p>
@@ -597,7 +607,7 @@ _0(E_b) \ra {\iota } \pi _0(E)=\{0\}.      \]
 
 
 <p>
-• To see how lecture notes look like with Lwarp, see subsections <a href="Sample_Lwarp_Xy-jax-9.html#adjunctions">6.1</a> and <a href="Sample_Lwarp_Xy-jax-10.html#Galois">6.2</a>.
+• To see how lecture notes look like with Lwarp, see subsections <a href="Sample_Lwarp_Xy-jax-10.html#adjunctions">6.1</a> and <a href="Sample_Lwarp_Xy-jax-11.html#Galois">6.2</a>.
 </p>
 
 
@@ -620,6 +630,35 @@ _0(E_b) \ra {\iota } \pi _0(E)=\{0\}.      \]
 <p>
 • Commutative diagrams drawn with <a href="https://tug.org/applications/Xy-pic/" target="_blank" ><b>Xy-pic</b></a> displayed by using <a href="https://github.com/sonoisa/XyJax-v3" target="_blank"
 ><b>XyJax-v3</b></a>.<br />
+For a good introduction to typeseting diagrams with Xy-pic see e.g.
+</p>
+<ul style="list-style-type:none">
+
+
+<li>
+<p>
+– <a href="https://www.math.purdue.edu/~adebray/lecture_notes/using_xy.pdf" target="_blank" >https://www.math.purdue.edu/~adebray/lecture_notes/using_xy.pdf</a> (Arun Debray Using XY to
+typeset automata. July 5, 2016.)
+</p>
+</li>
+<li>
+
+
+<p>
+– <a href="https://web.math.ku.dk/~holm/download/xyrefer.pdf" target="_blank" >https://web.math.ku.dk/~holm/download/xyrefer.pdf</a> (Kristoffer H. Rose &amp; Ross Moore: XY-pic Reference
+Manual, Version 3.7 1999/02/16.)
+</p>
+</li>
+<li>
+
+
+<p>
+– See also the more recent <a href="https://anorien.csc.warwick.ac.uk/mirrors/CTAN/macros/generic/diagrams/xypic/doc/xyguide.pdf" target="_blank" >user guide</a> (Kristoffer H. Rose, Version
+3.8.9, October 6, 2013) in the official page of <a href="https://ctan.org/pkg/xymatrix?lang=en" target="_blank" >xymatrix – Commutative diagrams using XY-pic </a>
+</p>
+</li>
+</ul>
+<p>
 E.g.
 </p>
 <p>
@@ -650,8 +689,31 @@ _{(x,y)} \otimes \eta &apos;_{(y,z)} }\\ \\ &amp; \displaystyle \bigoplus _{y \i
 @{=&gt;}[rrr]^&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;&gt;{\eta _{(X,Y,Z)}^{N_1,N_2}}&amp;&amp;&amp; \Hpb _{(X,Z)}^{N_1\times _Y N_2}\,.      } \]
 </p>
 <p>
-
-
+\[\xymatrix { &amp;\Cc \rtwocell ^F_{F&apos;}{\eta } &amp;\Dc } \]
+</p>
+<p>
+\[\hskip -0.5cm\xymatrix @C=25pt@R=30pt{&amp; T\times T\ar [drr]_{\sqcup } \ar [rr]^{ \tau } &amp;\drtwocell \omit {\,\,\, \mathbf {R}}&amp; T \times T \ar [d]^{\sqcup } \\ &amp;&amp;&amp; T.}
+\]
+</p>
+<p>
+\[\xymatrix @C=45pt{&amp;\Cc \sqcup \Cc &apos; \rtwocell \omit {\quad \,\, \langle \eta ,\eta &apos;\rangle } \ar @/^1.5pc/[r]^{T_b\circ \langle f, f&apos; \rangle } \ar @/_1.5pc/[r]_{\langle
+T,T&apos;\rangle } &amp; \Grp .        }\]
+</p>
+<p>
+\[ \xymatrix @C=60pt{\Cc \ruppertwocell ^F{\eta } \rlowertwocell _{F&apos;&apos;}{\eta &apos;} \ar [r]|{F&apos;&apos;} &amp; \Dc &amp; = &amp;\Cc \ar @/^1.5pc/[r]^{F}\ar
+@/_1.5pc/[r]_{F&apos;&apos;}\rtwocell \omit {\quad \,\,\,\,\eta \#_1\eta &apos;} &amp; \Dc &amp;} \]
+</p>
+<p>
+\[ \hskip -2cm\xymatrix @C=60pt{ &amp;\big ( \mathbf {Cob}^{(n,n+1,n+2)}\big )^3 \ar [d]_{\id \times \sqcup }\ar [dr]^{\sqcup \times \id } \drrtwocell \omit {\qquad \boldsymbol {\chi
+}&apos;\times \mathcal {F}_{\mathbf {B}}} \ddtwocell \omit {&lt;-13&gt; \alpha } \ar [rr]^{\mathcal {F}_{\mathbf {B}} \times \mathcal {F}_{\mathbf {B}} \times \mathcal {F}_{\mathbf {B}}}
+&amp;&amp; \big (\mathbf {Prof} \big )^3\ar [d]^{\otimes \times \id }\\ &amp;\big ( \mathbf {Cob}^{(n,n+1,n+2)})^2 \ar [d]_{\sqcup } &amp; \big ( \mathbf {Cob}^{(n,n+1,n+2)})^2 \ar
+[dl]^{\sqcup } \dtwocell \omit { \boldsymbol {\chi }&apos;} \ar [r]^{\mathcal {F}_{\mathbf {B}} \times \mathcal {F}_{\mathbf {B}}} &amp; \big (\mathbf {Prof} \big )^2 \ar [dl]^{\otimes } \\
+&amp; \big (\mathbf {Cob}^{(n,n+1,n+2)}\big ) \ar [r]_{\mathcal {F}_{\mathbf {B}}}&amp; \mathbf {Prof}\\ &amp; \ar @3[r]_{\boldsymbol {\omega }&apos;} &amp; \\ &amp;\big ( \mathbf
+{Cob}^{(n,n+1,n+2)}\big )^3 \ar [d]_{\id \times \sqcup } \drrtwocell \omit {\quad \qquad \mathcal {F}_{\mathbf {B}}\times \boldsymbol {\chi }&apos; }\ar [rr]^{\mathcal {F}_{\mathbf {B}} \times
+\mathcal {F}_{\mathbf {B}} \times \mathcal {F}_{\mathbf {B}}} &amp;&amp; \big (\mathbf {Prof} \big )^3\ddltwocell \omit {\alpha } \ar [d]^{\otimes \times \id }\ar [dl]^{\id \times \otimes }\\
+&amp;\big ( \mathbf {Cob}^{(n,n+1,n+2)})^2 \ar [d]_{\sqcup } \drtwocell \omit {\,\,\boldsymbol {\chi }&apos; } \ar [r]^{\mathcal {F}_{\mathbf {B}} \times \mathcal {F}_{\mathbf {B}}} &amp; \big
+( \mathbf {Prof})^2 \ar [d]^{\otimes } &amp; \big (\mathbf {Prof} \big )^2\ar [dl]^{\otimes }\\ &amp; \big (\mathbf {Cob}^{(n,n+1,n+2)}\big ) \ar [r]_{\mathcal {F}_{\mathbf {B}}}&amp; \mathbf
+{Prof}.   } \]
 </p>
 </li>
 </ul>
