--- a/Lwarp-JFM/Sample_Lwarp_Xy-jax-split-index.html
+++ b/Lwarp-JFM/Sample_Lwarp_Xy-jax-split-index.html
@@ -410,6 +410,8 @@ MathJax = {
 
 \(\newcommand {\Dc }{ \mathcal {D} }\)
 
+\( \newcommand {\Grp }{ \mathrm {Grp} } \)
+
 \(\newcommand {\Z }{ \mathbb {Z} }\)
 
 \(\newcommand {\ra }[1]{\xrightarrow {#1}}\)
@@ -468,12 +470,14 @@ Joa&#x0303;o Faria Martins
 <div class="titledate">
 
 <p>
-Last modified: May 23, 2023
+Last modified: April 15, 2024
 </p>
 </div>
 
 </div>
-<!--................................-->
+<!--
+...... section Contents ......
+-->
 <h4 id="autosec-3">Contents</h4>
 <a id="Sample_Lwarp_Xy-jax-split-autopage-3"></a>
 
@@ -483,7 +487,7 @@ Last modified: May 23, 2023
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-1.html#autosec-5" class="tocsection" >
-<span class="sectionnumber">1</span>&#x2003;Context: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
+<span class="sectionnumber">1</span>&#x2003;Context and instructions: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
 </p>
 
 
@@ -531,24 +535,30 @@ Last modified: May 23, 2023
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-8.html#autosec-61" class="tocsubsection" >
-<span class="sectionnumber">5.4</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
-</p>
-
-
-<p>
-<a href="Sample_Lwarp_Xy-jax-9.html#autosec-65" class="tocsection" >
-<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+<span class="sectionnumber">5.4</span>&#x2003;A tikz image compiled to an image with alt text, outside a float environment, and with a caption</a>
 </p>
 
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-9.html#autosec-66" class="tocsubsection" >
+<span class="sectionnumber">5.5</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-70" class="tocsection" >
+<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-71" class="tocsubsection" >
 <span class="sectionnumber">6.1</span>&#x2003;Adjoint functors and coadjoint functors via universal arrows</a>
 </p>
 
 
 <p>
-<a href="Sample_Lwarp_Xy-jax-10.html#autosec-72" class="tocsubsection" >
+<a href="Sample_Lwarp_Xy-jax-11.html#autosec-77" class="tocsubsection" >
 <span class="sectionnumber">6.2</span>&#x2003;The Galois correspondence for \(f(t)=t^3-2\), over the rational field</a>
 </p>
 </nav>
@@ -559,7 +569,12 @@ Last modified: May 23, 2023
 </p>
 
 <p>
-The responsibility for this HTML file is <a href="http://www1.maths.leeds.ac.uk/~pmtjfa/index.html" target="_blank" >Joa&#x0303;o Faria Martins</a>’ only.<br />
+\[\hskip -0.5cm\xymatrix @C=25pt@R=30pt{&amp; T\times T\ar [drr]_{\sqcup } \ar [rr]^{ \tau } &amp;\drtwocell \omit {\,\,\, \mathbf {R}}&amp; T \times T \ar [d]^{\sqcup } \\ &amp;&amp;&amp; T.}
+\]
+</p>
+
+<p>
+The responsibility for this HTML file is <a href="https://joaofariamartins.github.io/" target="_blank" >Joa&#x0303;o Faria Martins</a>’ only.<br />
 Corrections, suggestions, etc. are very welcome, and can be sent to: <a href="mailto:j.fariamartins@leeds.ac.uk" target="_blank" >j.fariamartins@leeds.ac.uk</a>.<br />
 <b>This is strictly a non-specialist experimental file.</b><br />
 
