--- a/Lwarp-JFM/Sample_Lwarp_Xy-jax-3.html
+++ b/Lwarp-JFM/Sample_Lwarp_Xy-jax-3.html
@@ -303,7 +303,7 @@ Home</a>
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-1.html#autosec-5" class="tocsection" >
-<span class="sectionnumber">1</span>&#x2003;Context: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
+<span class="sectionnumber">1</span>&#x2003;Context and instructions: using Lwarp to compile latex to HTML, so that xymatrix diagrams are displayed with Xy-Jax</a>
 </p>
 
 
@@ -351,24 +351,30 @@ Home</a>
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-8.html#autosec-61" class="tocsubsection" >
-<span class="sectionnumber">5.4</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
-</p>
-
-
-<p>
-<a href="Sample_Lwarp_Xy-jax-9.html#autosec-65" class="tocsection" >
-<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+<span class="sectionnumber">5.4</span>&#x2003;A tikz image compiled to an image with alt text, outside a float environment, and with a caption</a>
 </p>
 
 
 <p>
 <a href="Sample_Lwarp_Xy-jax-9.html#autosec-66" class="tocsubsection" >
+<span class="sectionnumber">5.5</span>&#x2003;A tikz-cd diagram compiled into a figure with alt text: </a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-70" class="tocsection" >
+<span class="sectionnumber">6</span>&#x2003;Sample mathematics</a>
+</p>
+
+
+<p>
+<a href="Sample_Lwarp_Xy-jax-10.html#autosec-71" class="tocsubsection" >
 <span class="sectionnumber">6.1</span>&#x2003;Adjoint functors and coadjoint functors via universal arrows</a>
 </p>
 
 
 <p>
-<a href="Sample_Lwarp_Xy-jax-10.html#autosec-72" class="tocsubsection" >
+<a href="Sample_Lwarp_Xy-jax-11.html#autosec-77" class="tocsubsection" >
 <span class="sectionnumber">6.2</span>&#x2003;The Galois correspondence for \(f(t)=t^3-2\), over the rational field</a>
 </p>
 
@@ -518,6 +524,8 @@ Home</a>
 
 \(\newcommand {\Dc }{ \mathcal {D} }\)
 
+\( \newcommand {\Grp }{ \mathrm {Grp} } \)
+
 \(\newcommand {\Z }{ \mathbb {Z} }\)
 
 \(\newcommand {\ra }[1]{\xrightarrow {#1}}\)
@@ -555,7 +563,9 @@ Home</a>
 </div>
 
 <p>
-<!--................................-->
+<!--
+...... section Issues when using XyJax-v3 and Lwarp for typesetting xymatrix diagrams ......
+-->
 <h4 id="autosec-16"><span class="sectionnumber">3&#x2003;</span>Issues when using XyJax-v3 and Lwarp for typesetting xymatrix diagrams</h4>
 <a id="Sample_Lwarp_Xy-jax-split-autopage-16"></a>
 <a id="Sample_Lwarp_Xy-jax-split-autofile-3"></a> Please do contact me if you know the solution to any of these issues. Remember: this is stricly a non-specialist file!
@@ -644,17 +654,6 @@ $$ \xymatrix{   } $$.
 
 
 <p>
-• The 2-cell option does not appear to work with Xy-Jaxv3. However xymatrix diagrams can still be compiled as svg figures, with alt text; see <a href="Sample_Lwarp_Xy-jax-5.html#xymatrix-with-alttext">5.1</a>.
-</p>
-<p>
-\[\xymatrixcolsep {0.5cm}\xymatrixrowsep {2cm}\hskip -0.5cm\xymatrix {&amp; T\times T\ar [drr]_{\sqcup } \ar [rr]^{ \tau } &amp;\drtwocell &lt;\omit &gt;{\,\,\, \mathbf {R}}&amp; T \times T \ar
-[d]^{\sqcup } \\ &amp;&amp;&amp; T.} \]
-</p>
-</li>
-<li>
-
-
-<p>
 • <b>Not all accessibility functions of MathJax work with Xy-Jaxv3, only some can be used, e.g. zoom and source latex code</b>.<br />
 Accessibility features of Xy-jax <a href="https://github.com/sonoisa/XyJax-v3" target="_blank" >are not officially supported</a>.<br />
 
@@ -671,7 +670,7 @@ Accessibility features of Xy-jax <a href="https://github.com/sonoisa/XyJax-v3" t
 <!--
 
 
-                                                                                              exp(x + yi) = ex cos(y) + i sin(y)                                                         (2)--><a id="Euler"></a><!--
+                                                                                              exp(x + yi) = ex cos(y) + i sin(y)                                                      (2)--><a id="Euler"></a><!--
                                                                                                                                    
 
 -->
